===========================================================================
 This file describes changes in the GAP package 'nq'.
===========================================================================

X.X (2011-XX-XX)
	+ Fixed spurious warnings when running "configure" that
	  could occur when using --with-gmp-prefix

2.3 (2011-09-15)
	+ Remove maintainer flag from Werner, add Max as new maintainer
	+ Sync cnf/config.* files with the ones used by GAP
	+ Rewrote and improved configure script and the build system
	+ Added '--with-gap-dir' option to configure
	+ Fixed compilation on modern day systems (e.g. Mac OS X),
	  by including stdlib.h and string.h instead of malloc.h 
	+ Stopped insisting on static linking the nq binary
	+ Dropped compatibility with GAP versions prior to 4.4
	+ Made test cases ignore the version string nq outputs
	+ Fixed crash on Mac OS X when compiling in 64 bit mode
	+ Updated documentation
	+ Enabled extra warnings for the C code, and fix many of resulting warnings
	+ Converted History file to this CHANGES file.

2.2 (2007-02-07)
	+ filter out the identity word as relator

2.1 (2003-10-20)
	+ removed instances of `share package'
	+ removed obsolete files doc/manual.in gap/nqrest.gi

2.0 (2003-02-12)
	+ GAP4 print routines (gap.c) added.  The -g option now
	  prints a pc-presentation in GAP4 style at the end of a
	  run. 
	+ Evaluation of an Engel identity redefines the Commute
	  array.  As a consequence, commutator calculations are
	  carried out only with the precision required to evaluate
	  an iterated commutator.  This gives a speedup of a factor
	  of 3-4 in Engel-4 and Engel-5 groups.
	+ Implementation of parsing Engel-n commutators and
	  evaluation of those commutators with redefined Commute[]
	  arrays. 
	+ turned NQ into a GAP 4 package
	+ modified the GAP 4 output routines
	+ wrote new setup for nq using autoconf
	+ replaced in glimt.c all BSD compatible integer functions